--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 alembic==1.7.7
 autopep8==1.6.0
 blinker==1.4
+certifi==2021.10.8
 click==7.1.2
+distlib==0.3.4
 dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.2.1
+filelock==3.7.0
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.6.0
+Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
@@ -25,10 +28,16 @@ Jinja2==2.11.3
 Mako==1.2.0
 markdown2==2.4.3
 MarkupSafe==2.0.1
+pipenv==2022.5.2
+pkg_resources==0.0.0
+platformdirs==2.5.2
 psycopg2==2.9.3
 pycodestyle==2.8.0
+six==1.16.0
 SQLAlchemy==1.4.36
 toml==0.10.2
+virtualenv==20.14.1
+virtualenv-clone==0.5.7
 visitor==0.1.3
 Werkzeug==0.16.1
 WTForms==3.0.1
