--- a/Pipfile
+++ b/Pipfile
@@ -40,6 +40,7 @@ SQLAlchemy = "==1.4.36"
 Werkzeug = "==0.16.1"
 WTForms = "==3.0.1"
 psycopg2-binary = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
